--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               A complete e-commerce website developed from scratch using Python (Django) and React.js. I designed the UI/UX, implemented backend APIs, and managed deployment, ensuring seamless performance</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -111,7 +111,7 @@
               Built a process dashboard for factory operations using Angular and Spring Boot. The dashboard visualized data like weights, salinity, and discrepancies in real time, improving operational efficiency.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -122,7 +122,7 @@
               Designed and developed an interactive trading dashboard with Node.js and React.js. Focused on dynamic chart rendering and enhanced usability for financial data analysis.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -133,7 +133,7 @@
               Created prototypes and wireframes for a dairy farm automation system. The design streamlined processes like inventory management and animal health tracking. Tools: Figma and Adobe XD.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -146,7 +146,7 @@
               </p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
       </div>
@@ -159,7 +159,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/img-2.png" alt="img">
+          <img src="./img-2.png" alt="img">
         </div>
       </div>
       <div class="col-right">
